# Rugjeez

./: .gitignore  CLAUDE.md  PLAN.md  README.md
.github/workflows/: ci.yml  deploy.yml
agent/: .env.example  README.md  agent-registration.json  agent_state.db  pyproject.toml
agent/agent/: bus.py  cache.py  chain.py  demo_api.py  demo_loader.py  executor.py  health.py  ipfs.py  logging.py  main.py  models.py  nonce.py  reasoner.py  resolver.py  scorer.py  state.py
agent/agent/abis/: BinaryMarket.json  ERC20.json  MarketRegistry.json
agent/agent/collectors/: nfi_blacklist.py  price_anomaly.py  rugjeez_blacklist.py
agent/agent/data/: demo_candidates.json  github_cache.json  symbol_map.json
agent/scripts/: register_erc8004.py
agent/tests/: test_canonical.py  test_scorer.py  test_state.py
bot/: .env.example  README.md  bot_state.db  pyproject.toml
bot/bot/: main.py  state.py  telegram.py  templates.py  trace.py  twitter.py  watcher.py
configs/: blacklist.json
contracts/: README.md
contracts/script/: Deploy.s.sol
contracts/src/: BinaryMarket.sol  MarketRegistry.sol  TraceRegistry.sol
contracts/test/: BinaryMarket.t.sol  MarketRegistry.t.sol
infra/: Makefile  README.md  deployed.json
infra/deploy/: deploy_contracts.sh  export_abis.sh  export_addresses.py
infra/seed/: inject_demo_signals.py
infra/status/: check_all.sh
web/: README.md  package-lock.json  package.json
web/public/favicon/: site.webmanifest
web/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/src/components/: AgentStats.tsx  BetSheet.tsx  CancelRefundPanel.tsx  ErrorBoundary.tsx  Leaderboard.tsx  MarketCard.tsx  Navbar.tsx  OddsDisplay.tsx  StatusFooter.tsx  TraceViewer.tsx  WalletConnect.tsx
(+36 files in other folders)
