[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rugoracle-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.13.0",
    "web3>=7.0.0",
    "aiohttp>=3.10.0",
    "eth-account>=0.13.0",
    "cachetools>=5.5.0",
    "tenacity>=9.0.0",
    "structlog>=24.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
