[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rugjeez-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "web3>=7.0.0",
    "eth-abi>=5.0.0",
    "aiohttp>=3.10.0",
    "structlog>=24.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
rugjeez-bot = "bot.main:run"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["bot"]
